<resources>
    <string name="app_name">EasyWay</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicmF5ZW4xMiIsImEiOiJjbGJ0NnRtNG4wMHB6M3ZtdnNuNzYxdHZtIn0.z9bQ58YoCbtR-BNWFHQk6A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //Activity Titles
    <string name="Settings">Settings</string>
    <string name="General">General</string>
    <string name="Map_settings">Map dark mode</string>
    <string name="Notifications">Notifications</string>
    <string name="Favorites">Saved Places</string>
    <string name="Planned_drives">Planned drives</string>
    <string name="Reminders">Reminders</string>
    <string name="Account">Account</string>
    <string name="Help_center">Help center</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="Login">Login</string>
    <string name="Navigation">Navigation</string>
    <string name="Privacy">Privacy</string>
    <string name="speedo">Speedometer</string>
    <string name="Language">Language</string>
    <string name="Distance_units">Distance units</string>
    <string name="map_skin">Map skin</string>
    <string name="map_view">Map view</string>
    <string name="Tickets">My tickets</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save_as_home_adress">Save as home \n address</string>
    <string name="save_as_work_address">Save as work address</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>